# FastAPI_test

./: env.example  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: e31b8b19de27_create_tables.py
src/: app.py  settings.py
src/database/: base.py
src/database/models/: users.py
src/routers/: users.py
src/schemas/: base.py  users.py
tests/: conftest.py  test_auth.py
