[tool.poetry]
name = "fastapi-test"
version = "0.1.0"
description = ""
authors = ["Beknazar Abdyldaev <abdyldaevgroup@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_test"}]

[tool.poetry.dependencies]
python = "^3.11"
asyncpg = "^0.27.0"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
python-dotenv = "^0.21.1"
sqlalchemy = "^2.0.1"
pydantic = "^1.10.4"
alembic = "^1.9.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
httpx = "^0.23.3"
pytest-asyncio = "^0.20.3"

[tool.pytest.ini_options]
pythonpath = [
  ".", ".",
]
asyncio_mode="auto"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
